--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "jest"
+    "start": "nodemon src/api/v1/index.js",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/karaarora/lambda-be#readme",
   "dependencies": {
+    "eslint-plugin-import": "^2.24.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12"
   }
