--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "homepage": "https://github.com/karaarora/lambda-be#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "eslint-plugin-import": "^2.24.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.13.7",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
