--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
   },
   "homepage": "https://github.com/karaarora/lambda-be#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint-plugin-import": "^2.24.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.13.7",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
