--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "eslint-plugin-import": "^2.24.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "parse-multipart": "^1.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "winston": "^3.3.3"
   },
