--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "sinon": "^11.1.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
